--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ jobs:
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install plotly webcolors scikit-image
-        python setup.py install
+        python setup.py install --vtk
         ./tests/run_tests.sh
       os: linux
       python: 3.6
@@ -99,7 +99,7 @@ jobs:
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install coveralls coverage plotly webcolors scikit-image
-        python setup.py install
+        python setup.py install --vtk
         ./tests/run_tests.sh -c
         cd tests
         coveralls
