--- a/.travis.yml
+++ b/.travis.yml
@@ -26,57 +26,56 @@ before_install: |
       python3 -m venv venv;
       source venv/bin/activate;
   fi
-
-#    - stage: makeVTK
-#      script: |
-#        unset CCACHE_DISABLE
-#        export CCACHE_DIR=$HOME/.ccache
-#        ./scripts/configure_VTK_External_linux.sh;
-#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
-#      os: linux
-#      sudo: required
-#      python: 3.6
-#    - stage: makeVTK
-#      script: |
-#        brew update;
-#        brew install ccache;
-#        unset CCACHE_DISABLE;
-#        export CCACHE_DIR=$HOME/.ccache;
-#        ccache --show-stats;
-#        export PATH="/usr/local/opt/ccache/libexec:$PATH";
-#        ./scripts/configure_VTK_External_mac.sh;
-#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
-#      os: osx
-#      sudo: required
-#      language: generic
-#
-#
-#    - stage: makeITK
-#      script: |
-#        unset CCACHE_DISABLE
-#        export CCACHE_DIR=$HOME/.ccache
-#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
-#        ./scripts/configure_ITK_External_linux.sh;
-#      os: linux
-#      sudo: required
-#      python: 3.6
-#    - stage: makeITK
-#      script: |
-#        brew update;
-#        brew install ccache;
-#        unset CCACHE_DISABLE;
-#        export CCACHE_DIR=$HOME/.ccache;
-#        ccache --show-stats;
-#        export PATH="/usr/local/opt/ccache/libexec:$PATH";
-#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
-#        ./scripts/configure_ITK_External_mac.sh;
-#      os: osx
-#      sudo: required
-#      language: generic
   
 
 jobs:
   include:
+
+    - stage: makeVTK
+      script: |
+        unset CCACHE_DISABLE
+        export CCACHE_DIR=$HOME/.ccache
+        ./scripts/configure_VTK_External_linux.sh;
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
+      os: linux
+      sudo: required
+      python: 3.6
+    - stage: makeVTK
+      script: |
+        brew update;
+        brew install ccache;
+        unset CCACHE_DISABLE;
+        export CCACHE_DIR=$HOME/.ccache;
+        ccache --show-stats;
+        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+        ./scripts/configure_VTK_External_mac.sh;
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
+      os: osx
+      sudo: required
+      language: generic
+
+    - stage: makeITK
+      script: |
+        unset CCACHE_DISABLE
+        export CCACHE_DIR=$HOME/.ccache
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
+        ./scripts/configure_ITK_External_linux.sh;
+      os: linux
+      sudo: required
+      python: 3.6
+    - stage: makeITK
+      script: |
+        brew update;
+        brew install ccache;
+        unset CCACHE_DISABLE;
+        export CCACHE_DIR=$HOME/.ccache;
+        ccache --show-stats;
+        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
+        ./scripts/configure_ITK_External_mac.sh;
+      os: osx
+      sudo: required
+      language: generic
 
     - stage: install
       script: |
@@ -86,6 +85,7 @@ jobs:
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install coveralls plotly webcolors scikit-image fancyimpute 
         python setup.py install
+        ./tests/run_tests_travis.sh
       os: linux
       python: 3.6
       sudo: required
