--- a/.travis.yml
+++ b/.travis.yml
@@ -15,29 +15,29 @@ cache:
 jobs:
   include:
 
-    - stage: makeVTK
-      script: |
-        unset CCACHE_DISABLE
-        export CCACHE_DIR=$HOME/.ccache
-        ./scripts/configure_VTK_External_linux.sh;
-        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
-      os: linux
-      sudo: required
-      python: 3.6
-    - stage: makeVTK
-      script: |
-        brew update;
-        brew install ccache;
-        unset CCACHE_DISABLE;
-        export CCACHE_DIR=$HOME/.ccache;
-        ccache --show-stats;
-        export PATH="/usr/local/opt/ccache/libexec:$PATH";
-        ./scripts/configure_VTK_External_mac.sh;
-        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
-      os: osx
-      sudo: required
-      language: generic
- 
+#    - stage: makeVTK
+#      script: |
+#        unset CCACHE_DISABLE
+#        export CCACHE_DIR=$HOME/.ccache
+#        ./scripts/configure_VTK_External_linux.sh;
+#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
+#      os: linux
+#      sudo: required
+#      python: 3.6
+#    - stage: makeVTK
+#      script: |
+#        brew update;
+#        brew install ccache;
+#        unset CCACHE_DISABLE;
+#        export CCACHE_DIR=$HOME/.ccache;
+#        ccache --show-stats;
+#        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+#        ./scripts/configure_VTK_External_mac.sh;
+#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
+#      os: osx
+#      sudo: required
+#      language: generic
+
     - stage: makeITK
       script: |
         unset CCACHE_DISABLE
@@ -67,8 +67,8 @@ jobs:
         export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
-        travis_retry pip install coveralls plotly webcolors scikit-image fancyimpute 
-        python setup.py install 
+        travis_retry pip install coveralls plotly webcolors scikit-image fancyimpute
+        python setup.py install
         ./tests/run_tests_travis.sh
       os: linux
       python: 3.6
@@ -80,12 +80,12 @@ jobs:
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install coveralls coverage plotly webcolors scikit-image fancyimpute
-        python setup.py install 
+        python setup.py install
         ./tests/run_tests_travis.sh
       os: osx
       sudo: required
       language: generic
-   
+
   allow_failures:
     - os: osx
 
