--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ jobs:
         unset CCACHE_DISABLE
         export CCACHE_DIR=$HOME/.ccache
         export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
-        ./scripts/configure_ITK_External_linux.sh;
+        ./scripts/configure_ITK_External_linux.sh
       os: linux
       sudo: required
       python: 3.6
@@ -56,14 +56,14 @@ jobs:
         ccache --show-stats;
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
         export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
-        ./scripts/configure_ITK_External_mac.sh;
+        ./scripts/configure_ITK_External_linux.sh
       os: osx
       sudo: required
       language: generic
 
     - stage: install
       script: |
-        export ITK_DIR=$TRAVIS_BUILD_DIR/itkbuild-linux
+        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME}
         export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
@@ -75,7 +75,7 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild-mac
+        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME}
         export VTK_DIR=$HOME/vtkbuild-mac
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
