--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,8 @@ jobs:
         curl -sSL https://cmake.org/files/v3.11/cmake-3.11.3-Linux-x86_64.sh -o ${CMAKE_INSTALLER};
         chmod +x ${CMAKE_INSTALLER};
         sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license;
-        ./scripts/configure_ITK_External_linux.sh
+        ./scripts/configure_ITK_External_linux.sh ;
+        find /usr/local -name cmake
       os: linux
       sudo: required
       python: 3.6
