COMP: use good cmake version - osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ jobs:
         curl -sSL https://cmake.org/files/v3.11/cmake-3.11.3-Linux-x86_64.sh -o ${CMAKE_INSTALLER};
         chmod +x ${CMAKE_INSTALLER};
         sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license;
+        cmake --version;
         ./scripts/configure_ITK_External_linux.sh ;
         find /usr/local -name cmake
       os: linux
@@ -61,6 +62,9 @@ jobs:
         ccache --show-stats;
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
         export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
+        brew install cmake;
+        brew upgrade cmake;
+        cmake --version;
         ./scripts/configure_ITK_External_linux.sh
       os: osx
       sudo: required
