COMP: update ants tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,11 +69,11 @@ jobs:
 
     - stage: install
       script: |
-        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME}
-        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux
-        travis_retry pip install --upgrade pip setuptools wheel
-        travis_retry pip install -r requirements.txt --only-binary=scipy
-        travis_retry pip install coveralls plotly webcolors scikit-image fancyimpute
+        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME};
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
+        travis_retry pip install --upgrade pip setuptools wheel;
+        travis_retry pip install -r requirements.txt --only-binary=scipy;
+        travis_retry pip install coveralls plotly webcolors scikit-image;
         python setup.py install
         ./tests/run_tests_travis.sh
       os: linux
