--- a/.travis.yml
+++ b/.travis.yml
@@ -81,13 +81,14 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME}
-        alias cmake=/usr/local/bin/cmake
-        export VTK_DIR=$HOME/vtkbuild-mac
-        travis_retry pip install --upgrade pip setuptools wheel
-        travis_retry pip install -r requirements.txt --only-binary=scipy
-        travis_retry pip install coveralls coverage plotly webcolors scikit-image
-        python setup.py install
+        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME};
+        ls $ITK_DIR
+        alias cmake=/usr/local/bin/cmake;
+        export VTK_DIR=$HOME/vtkbuild-mac;
+        travis_retry pip install --upgrade pip setuptools wheel;
+        travis_retry pip install -r requirements.txt --only-binary=scipy;
+        travis_retry pip install coveralls coverage plotly webcolors scikit-image;
+        python setup.py install;
         ./tests/run_tests_travis.sh
       os: osx
       python: 3.6
