--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,10 @@ jobs:
     - stage: install
       script: |
         export ITK_DIR=${TRAVIS_BUILD_DIR}/itkjunk/itkbuild-${TRAVIS_OS_NAME};
-        ls $ITK_DIR
+        python -m pip install --upgrade pip;
+        pip install --upgrade wheel;
+        pip install --upgrade numpy;
+        pip install --upgrade setuptools;
         alias cmake=/usr/local/bin/cmake;
         export VTK_DIR=$HOME/vtkbuild-mac;
         travis_retry pip install --upgrade pip setuptools wheel;
