--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -210,6 +210,7 @@ jobs:
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+        if: ${{ github.event_name == 'push' }}
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
