--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -84,32 +84,33 @@ jobs:
             platform_id: manylinux_x86_64
 
           # macOS universal
+          # macOS on Intel 64-bit
           - os: macos-latest
             python: '3.7'
             cibw_python: 37
             arch: x86_64
-            platform_id: universal
+            platform_id: macosx_x86_64
           - os: macos-latest
             python: '3.8'
             cibw_python: 38
             arch: x86_64
-            platform_id: universal
+            platform_id: macosx_x86_64
           - os: macos-latest
             python: '3.9'
             cibw_python: 39
-            arch: x86_64
-            platform_id: universal
+            arch: universal2
+            platform_id: macosx_x86_64
           - os: macos-latest
             python: '3.10'
             cibw_python: 310
             arch: x86_64
-            platform_id: universal
+            platform_id: macosx_x86_64
           - os: macos-latest
             python: '3.11'
             cibw_python: 311
             arch: x86_64
-            platform_id: universal
-
+            platform_id: macosx_x86_64
+            
           # macOS on Apple M1 64-bit
           # - os: macos-latest
           #   python: '3.8'
