--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -199,7 +199,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish prep
-        if: ${{ (github.event_name == 'release') && (runner.os == 'Linux') }}
+        if: ${{ (github.event_name == 'release') }}
         run: |
           mywhl=`find ~/ -name "antspyx*.whl"`
           extrawheeldir=`dirname $mywhl`
