--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -14,28 +14,28 @@ jobs:
           # Have to specify python version twice so that the same python is used to build and test
           # Need to quote decimal versions as string to avoid the "Norway problem"
 
-          # Windows 64-bit
-          - os: windows-latest
-            python: '3.11'
-            cibw_python: 311
-            platform_id: win_amd64
+          # Windows 64-bit - broken due to ITK issues
+        #   - os: windows-latest
+        #     python: '3.12'
+        #     cibw_python: 312
+        #     platform_id: win_amd64
 
           # Linux 64-bit
           - os: ubuntu-latest
-            python: '3.11'
-            cibw_python: 311
+            python: '3.12'
+            cibw_python: 312
             platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
           - os: macos-13
-            python: '3.11'
-            cibw_python: 311
+            python: '3.12'
+            cibw_python: 312
             arch: x86_64
             platform_id: macosx_x86_64
 
           # macOS on Apple M1 64-bit, supported for Python 3.10 and later
           - os: macos-14
-            python: '3.11'
+            python: '3.12'
             cibw_python: 311
             arch: arm64
             platform_id: macosx_arm64
@@ -77,6 +77,14 @@ jobs:
         run: |
           macos_version=$(sw_vers -productVersion | awk -F '.' '{print $1".0"}')
           echo "MACOSX_DEPLOYMENT_TARGET=${macos_version}" >> $GITHUB_ENV
+          echo -n "clang version : "
+          clang --version
+          echo -n "xcode version : "
+          xcode-select -p
+          echo -n "cmake version : "
+          cmake --version
+          echo -n "env : "
+          env
 
       - name: Build wheels
         env:
