BUG: wrong use of bash subshell in cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project(ants LANGUAGES CXX)
 
 # Set the macOS SDK root
 if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    set(CMAKE_OSX_SYSROOT "$(xcrun --show-sdk-path)")
+    execute_process(
+        COMMAND xcrun --show-sdk-path
+        OUTPUT_VARIABLE SDK_PATH
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+    )
+    set(CMAKE_OSX_SYSROOT ${SDK_PATH})
     message(STATUS "Using macOS SDK: ${CMAKE_OSX_SYSROOT}")
 endif()
 
