--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -64,7 +64,7 @@ jobs:
           MSVC_BIN="$MSVC_VERSION/bin/Host$MSVC_ARCH/$MSVC_ARCH"
           echo "C_LD=$MSVC_BIN/link.exe" >> $GITHUB_ENV
           # Verify the linker path
-          echo "Set C_LD to : $MSVC_BIN/link.exe
+          echo "Set C_LD to : $MSVC_BIN/link.exe"
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.19.2 setuptools toml
