--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -34,8 +34,11 @@ jobs:
           - os: windows-latest
             python: '3.12'
             cibw_python: 312
-            platform_id: win_amd64          
-
+            platform_id: win_amd64
+          - os: windows-latest
+            python: '3.13'
+            cibw_python: 313
+            platform_id: win_amd64
 
           # Linux 64-bit
           - os: ubuntu-latest
@@ -112,7 +115,7 @@ jobs:
             cibw_python: 313
             arch: arm64
             platform_id: macosx_arm64
-            
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -192,7 +195,7 @@ jobs:
 
       - name: Install and test (Windows)
         if: startsWith(matrix.os, 'windows-')
-        shell: bash
+        shell: cmd # Use cmd on Windows to avoid bash environment taking priority over MSVC variables
         run: |
           python -m pip install --find-links=./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }} antspyx
           bash tests/run_tests.sh
