--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -23,12 +23,14 @@ jobs:
         shell: bash -el {0}
     steps:
       - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@030178870c779d9e5e1b4e563269f3aa69b04081 # v3.0.3, devs recommend using hash
+        uses: conda-incubator/setup-miniconda@505e6394dae86d6a5c7fbb6e3fb8938e3e863830 # v3.1.1, devs recommend using hash
         with:
           miniconda-version: "latest"
           python-version: ${{ env.python_version }}
           auto-update-conda: true
           activate-environment: "test-env"
+          channels: conda-forge
+          channel-priority: strict
 
       - name: Configure Conda to use only .tar.bz2
         run: |
@@ -43,7 +45,7 @@ jobs:
         run: |
           conda create -n antspy-env python=${{ env.python_version }} -y
           conda activate antspy-env
-          conda install -c conda-forge coverage
+          conda install coverage
           conda info
           pip install ./antspy-pr
           conda list
